2008-09-15  Michal Ludvig  <michal@logix.cz>

	* Merge from trunk, revision 221:
	* s3cmd: Refuse 'sync' together with '--encrypt'.

2008-09-15  Michal Ludvig  <michal@logix.cz>

	* Merge from trunk, revisions 218, 226, 233, 234:
	* s3cmd, S3/S3.py, S3/Config.py: Allow access to upper-case
	  named buckets again with --use-old-connect-method 
	  (uses http://s3.amazonaws.com/bucket/object instead of
	  http://bucket.s3.amazonaws.com/object)
	* s3cmd, S3/S3.py, S3/Config.py: Removed --use-old-connect-method
	  again. Autodetect the need for old connect method instead.
	* S3/S3.py: "s3cmd mb" can create upper-case buckets again
	  in US. Non-US (e.g. EU) bucket names must conform to strict
	  DNS-rules.
	* S3/S3Uri.py: Display public URLs correctly for non-DNS buckets.

2008-09-15  Michal Ludvig  <michal@logix.cz>

	* Merge from trunk, revisions 227, 230:

	* r227: s3cmd: Rework UTF-8 output to keep sys.stdout untouched 
	  (or it'd break 's3cmd get' to stdout for binary files).
	* r230: s3cmd, S3/S3Uri.py, S3/S3.py: All internal representations
	  of S3Uri()s are Unicode (i.e. not UTF-8 but type()==unicode). It
	  still doesn't work on non-UTF8 systems though.

2008-08-19  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Always output UTF-8, even on output
	  redirects.

2008-08-01  Michal Ludvig  <michal@logix.cz>

	* TODO: Add some items

2008-07-29  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8.3
	  ------------------------

2008-07-29  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8.3
	* NEWS: Added 0.9.8.3

2008-07-29  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py (hash_file_md5): Hash files in 32kB chunks
	  instead of reading it all up to a memory first to avoid
	  OOM on large files.

2008-07-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: couple of syntax fixes from Mikhail Gusarov

2008-07-03  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8.2
	  ------------------------
